@@ -3,6 +3,9 @@ The following changes have been made between John 1.7.3.2 and 1.7.3.3:
 * "make check" has been implemented (for Unix-like systems only).
 * The --test option will now take an optional argument - the duration of each
 benchmark in seconds.
+* Section .note.GNU-stack has been added to all assembly files to avoid the
+stack area unnecessarily being made executable on Linux systems that use this
+mechanism.
 
 The following changes have been made between John 1.7.3.1 and 1.7.3.2:
 
@@ -77,4 +80,4 @@ Mac OS X (PowerPC and x86), SCO, BeOS.
 * Bug and portability fixes, and new bugs.
 * Bonus: "Strip" cracker included in the default john.conf (john.ini).
 
-$Owl: Owl/packages/john/john/doc/CHANGES,v 1.29 2009/09/09 04:52:10 solar Exp $
+$Owl: Owl/packages/john/john/doc/CHANGES,v 1.30 2009/09/09 05:23:45 solar Exp $
